--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,9 +1,9 @@
 <table class="w-600 sm:w-full" align="center">
-    <tr>
-      <td class="p-48 sm:py-32 sm:px-24 text-center">
-        <a href="https://ohmysmtp.com">
-          <img src="logo.png" width="75" alt="Your Logo">
-        </a>
-      </td>
-    </tr>
+  <tr>
+    <td class="p-48 sm:py-32 sm:px-24 text-center">
+      <a href="https://www.ipatt.art">
+        <img src="Logo_IPATT.png" width="120" alt="Art Logo">
+      </a>
+    </td>
+  </tr>
 </table>
